TODO: only re-write a local database if it is changed.

2005-05-20  Adriaan de Groot
* Split PISOCK_LIB into PISOCK_LIB and PISOCK_LDFLAGS. This makes it possible
  to slip the include and library dir for pilot-link right in front, which in
  turn makes it possible to build against development pilot-link versions even
  if there are installed copies in standard locations as well.

2005-05-16  Adriaan de Groot
* Added yet another constructor to the local databases, this time hopefully
  one that doesn't have a horribly convoluted semantics -- it just opens
  a file (or not).
* Added more tests for lib. These will always fail unless you have a copy
  of Aesop's fables in /tmp .

2005-05-13  Adriaan de Groot
* Friday the 13th! I merged HEAD to BRANCH and am now working in
  BRANCH (branches/KDE/3.4/kdepim/kpilot) to do bugfixes. New features
  and strings go in HEAD, and we'll forward-port bugfixes at some
  point. The cutover is revision 413061.

2005-05-11  Adriaan de Groot
* Wasted much time trying to get generic FreeBSD USB support for non-
  Visors working in pilot-link-0.12 before I found out that ColdSync
  doesn't support that either.
* Removed non-working calendar conduits (calendarbaseconduit/ and
  calendarconduits/) from the conduits dir; restore them w/ SVN
  commits near 412528. These were recordconduit-based conduits
  by Reinhold, but I broke the RecordConduit in the meantime.

2005-05-07  Adriaan de Groot
* After tweaking pilot-link 0.12-pre3 so that KPilot will with it (has to do
  with API consistency) the AppInfo template class works again, and i've
  extended it a little to make setting and getting category names nicer.
* Applied the new template to the memofile conduit.

2005-04-22  Adriaan de Groot
* Fixed (I hope) bug in notepad conduit related to having zero records in the
  database.
* Added some more dox.

2005-04-20  Adriaan de Groot
* Finally added a general test() function to sync actions to mirror the